# chemprop-tabpfn

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  rq4_report.md
.claude/: settings.local.json
cluster/: README.md  interactive.sub  run_al.sh  run_al.sub  run_al_finetune.sh  run_al_finetune.sub  run_gpu.sh  run_gpu.sub  setup_env.sh
examples/HTCondor/: pytorch_matmul.py  pytorch_matmul.sub  pytorch_matmul_interactive.sub  tf_matmul_docker.py  tf_matmul_docker.sub  tf_matmul_docker_interactive.sub
examples/chemprop/: rigr_featurizer.ipynb  use_featurizer_with_other_libraries.ipynb
examples/tabpfn/: finetune_classifier.py  finetune_regressor.py
notebooks/: dataset_creation.ipynb
notes/: notes-2026-07-16.md
results/: run_al.54694.0.err
src/: active_learning.py  metrics.py  ranking_eval.py  representations.py  training.py
src/data_utils/: data.py
src/models/: acquisition.py  checkpoints.py  chemeleon.py  encoder.py  morgan.py  tabpfn_regressor.py
src/scripts/: clean_chembl_targets.py  model_evaluation.py  run_active_learning.py  run_active_learning_finetune.py  run_experiment.py  run_experiment_gpu.py  sanity_overfit.py
tests/: test_acquisition.py  test_data.py  test_encoder.py  test_metrics.py  test_morgan.py  test_ranking_eval.py  test_run_experiment.py  test_tabpfn_head.py
